# base_rf

./: .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yaml  log.html  output.xml  pyproject.toml  report.html
Criando Page Objects com Robot Framework/: README.md
Criando Page Objects com Robot Framework/Resource/data/: login_data.yml
Criando Page Objects com Robot Framework/Resource/locators/: cart_layer_locators.yml  home_locators.yml  product_details_locators.yml
Criando Page Objects com Robot Framework/Resource/pages/: authentication_page.resource  my_account_page.resource  product_detail_page.resource
Criando Page Objects com Robot Framework/Resource/utils/: open_browser.resource
Criando Page Objects com Robot Framework/Test/: PageObjects_Test.robot  With_PageObjects_Test.robot  Withoyt_PageObjects_Test.robot
Explorando a JSONLibrary/: README.md
Explorando a JSONLibrary/Resources/services/: get_jsonplanceholder.resource  post_jsonplanceholder.resource
Explorando a JSONLibrary/Resources/sessions/: jsonplaceholder_session.resource
Explorando a JSONLibrary/Tests/: test_jsonplaceholder.robot
Login Google/Resources/custom_libraries/: undetected_chromedriver.py
Login Google/Tests/: Login Google.robot
Robot Jenkins/: Jenkinsfile
Robot Jenkins/app/: app.py  routes.py
Robot Jenkins/regression_tests/Tests/: Hello Jenkins.robot
Utilizando Gherkin no Robot Framework/: README.md
Utilizando Gherkin no Robot Framework/tests/: nativeGherkin.robot  userKeywordGherkin.robot
robot_jenkins/api/Tests/: GetJSONPlaceholder.robot
(+15 files in other folders)
